themes-dist/ShadowBox/Global.css
/*********************************************************
 * general styles
 *********************************************************/

body {
    background-color: [[BG_COLOR]];
    color: [[TEXT_COLOR]];
    font-family: [[FONT_FAMILY]];
    font-size:12px;
    padding-top: 5px;
    margin: 1px;
}

a {
    text-decoration: [[LINK_DECORATION]];
    color: [[LINK_COLOR]];
    cursor: pointer;
}

a:hover {
    text-decoration: underline;
}

.thumbnail_image {
    border: 1px solid #000;
}

.thumbnail_icon {
    border: 0px solid #000;
}

.plugin_content {
    color: [[TEXT_COLOR]];
}

.plugin_content a {
    text-decoration: [[LINK_DECORATION]];
}

.plugin_content a:hover {
    text-decoration: underline;
}

/*********************************************************
 * IE hack to fix disappearing text
 *********************************************************/


/*********************************************************
 * Styles for Segue links, log in, and editing controls
 * [[BG_TEXT_COLOR]] should contrast with [[BG_COLOR]]
 *********************************************************/
.seguelinks a {
    color: [[BG_LINK_COLOR]];
    padding-left: 15px;
}

.seguelinks {
    color: [[BG_TEXT_COLOR]];
    padding-left: 15px;
}

.commands {
    color: [[BG_TEXT_COLOR]];
    margin-right: 25px;
}

.commands a {
    color: [[BG_LINK_COLOR]];

}

.login {
    color: [[BG_TEXT_COLOR]];
}

.login a {
    color: [[BG_LINK_COLOR]];
}

.seguefooter_right {
    color: [[BG_LINK_COLOR]];
    margin-right: 25px;
}

.seguefooter_right a {
    color: [[BG_TEXT_COLOR]];
}

seguefooter_left {
    color: [[BG_LINK_COLOR]];
    margin-left: 20px;
}

.seguefooter_left a {
    color: [[BG_TEXT_COLOR]];
    margin-left: 20px;
}

/*********************************************************
 * Styles attribution, tags, history, pagination
 *********************************************************/


.pagination_links {
    color: [[BG_TEXT_COLOR]];
}

.pagination_links a {
    color: [[MENU_UNSELECTED_COLOR]];
    text-decoration: none;
    border: 1px solid;
    padding-left: 2px;
    padding-right: 2px;
}

.pagination_links a:hover {
    display: block
    border: 1px solid [[LINK_COLOR]];
    color: [[LINK_COLOR]];
    cursor: pointer;
}

.tagging_tags_display {

}

.attribution_line {
    color: [[ATRIBUTION_TEXT_COLOR]];
}    

.comment {
    border-top: 1px [[BORDER_STYLE]] [[BORDER_COLOR]];
}

.comment_byline {
    color: [[ATRIBUTION_TEXT_COLOR]];
}

.history {

}

